--- a/index.html
+++ b/index.html
@@ -60,9 +60,12 @@
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">BLAZER</br> NEW</br> SEASON</h1>
                 <h2 class="sliderPrice">$109</h2>
-                <a href="#product">
+<!--                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
-                </a>
+                </a> -->
+                 <a href="#product" class="button-section">
+                      <button class="button" >AVAILABLE NOW</button>
+                 </a>
             </div>
             <div class="sliderItem">
                 <img src="./img/crater.png" alt="" class="sliderImg">
